--- a/Hotel.WebApp/Views/_ViewImports.cshtml
+++ b/Hotel.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using Hotel.WebApp
 @using Hotel.WebApp.Models
+@using Microsoft.AspNetCore.Identity;
+@using Hotel.Api.Domain.Entities;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
