--- a/Hotel.WebApp/Views/Payments/AllPayments.cshtml
+++ b/Hotel.WebApp/Views/Payments/AllPayments.cshtml
@@ -40,7 +40,7 @@
                         {
                             <tr>
                                 <td>
-                                    <strong>@payment.Id</strong>
+                                    <a href="/payments/reservations/@payment.Id"><strong>@payment.Id</strong></a>
                                 </td>
                                 <td>@payment.UserId</td>
                                 <td>@payment.FirstName</td>
