--- a/Hotel.WebApp/Views/Dashboard/Dashboard.cshtml
+++ b/Hotel.WebApp/Views/Dashboard/Dashboard.cshtml
@@ -109,14 +109,14 @@
         </div>
         <div class="col-md-4 offset-xl-0">
             <p>
-                <a class="btn btn-success btn-circle ml-1" role="button"><i class="fas fa-check text-white"></i></a> <a href="/payments"><strong> Payments</strong></a> |<small> <a href="/payments">All Payments</a></small>
+                <a class="btn btn-success btn-circle ml-1" role="button"><i class="fas fa-check text-white"></i></a> <a href="/payments/@user.Id"><strong> Payments</strong></a> |<small> <a href="/payments">All Payments</a></small>
             </p>
         </div>
         <div class="col-md-4">
             <p>
                 <a href="/reservations" class="btn btn-info btn-circle ml-1" role="button">
                     <i class="fas fa-info-circle text-white"></i>
-                </a><a href="/reservations"><strong> Reservations</strong></a> |<small>
+                </a><a href="/reservations/@user.Id"><strong> Reservations</strong></a> |<small>
                     <a href="/reservations/add">Add Reservation</a>
                 </small>
             </p>
