--- a/Hotel.WebApp/Views/Reservations/AllReservations.cshtml
+++ b/Hotel.WebApp/Views/Reservations/AllReservations.cshtml
@@ -32,13 +32,11 @@
                 <table class="table table-bordered" id="dataTable">
                     <thead>
                         <tr>
-                            <th>&nbsp;</th>
                             <th>Reservation ID</th>
                             <th>CheckIn Date</th>
                             <th>CheckOut Date</th>
                             <th>Room Number</th>
                             <th>Room Price</th>
-                            <th>Reserved By</th>
                             <th>Is Payed</th>
                             <th>Actions</th>
                         </tr>
@@ -47,15 +45,13 @@
                         @foreach (var reservation in Model.Reservations)
                         {
                             <tr>
-                                <td><input type="checkbox" /></td>
                                 <td>
                                     <strong>@reservation.Id</strong>
                                 </td>
                                 <td>@reservation.CheckInDate.ToString("dddd, dd MMMM @ hh:mm tt")</td>
                                 <td>@reservation.CheckOutDate.ToString("dddd, dd MMMM @ hh:mm tt")</td>
-                                <td><a href="/rooms/@reservation.RoomId">@reservation.RoomNumber</a></td>
+                                <td><a href="/rooms/@reservation.RoomId">@reservation.RoomId</a></td>
                                 <td>@reservation.RoomPrice</td>
-                                <td>@reservation.FirstName @reservation.LastName</td>
                                 <td>@Model.IsPayed</td>
                                 @{
                                     if (user.Id == reservation.UserId || User.IsInRole("Admin"))
