--- a/Hotel.WebApp/Views/Rooms/AllRooms.cshtml
+++ b/Hotel.WebApp/Views/Rooms/AllRooms.cshtml
@@ -1,4 +1,5 @@
 @using Hotel.Api.Application.Common.Models.RoomModels
+@using System.Linq;
 @{
     Layout = "~/Views/Shared/_DashboardLayout.cshtml";
 }
@@ -20,13 +21,16 @@
                 @foreach (var room in Model)
                 {
                     <div class="col-sm-6 col-md-4 item shadow-sm pb-2">
-                        <a href="/rooms/@room.Id"><img class="img-fluid" src="@room.Images.ElementAt(0)" /></a>
+                        <a href="/rooms/@room.Id"><img class="img-fluid" src="@room.Images.LastOrDefault()" /></a>
                         <a href="/rooms/@room.Id"><h3 class="name">Room Number: @room.RoomNumber</h3></a>
                         <p class="description">Room Type: @room.RoomType</p>
-                        <form method="post" asp-action="DeleteRoom" asp-controller="Rooms">
-                            <input type="hidden" name="RoomId" value="@room.Id" />
-                            <button class="btn btn-light m-2" type="submit"><i class="fa fa-trash-alt"></i></button>
-                        </form>
+                        @if (User.IsInRole("Admin"))
+                        {
+                            <form method="post" asp-action="DeleteRoom" asp-controller="Rooms">
+                                <input type="hidden" name="RoomId" value="@room.Id" />
+                                <button class="btn btn-light m-2" type="submit"><i class="fa fa-trash-alt"></i></button>
+                            </form>
+                        }
                     </div>
                 }
             </div>
