--- a/Hotel.WebApp/Views/Shared/_DashboardLayout.cshtml
+++ b/Hotel.WebApp/Views/Shared/_DashboardLayout.cshtml
@@ -1,4 +1,4 @@
-@using Hotel.Api.Infrastructure.Persistence;
+﻿@using Hotel.Api.Infrastructure.Persistence;
 @inject ApplicationDbContext context;
 @inject SignInManager<User> signInManager;
 @inject UserManager<User> userManager;
@@ -29,21 +29,6 @@
         <nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top" id="page-top">
             <a href="/dashboard"><img id="logo" src="~/img/logo.png" alt="Hotel Management"></a>
             <div class="container-fluid">
-                <button class="btn btn-link d-md-none rounded-circle mr-3"
-                        id="sidebarToggleTop" type="button">
-                    <i class="fas fa-bars"></i>
-                </button>
-                <form method="POST" asp-action="SearchRoom" asp-controller="Rooms" class="form-inline d-none d-sm-inline-block mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search">
-                    <div class="input-group">
-                        <input type="text" name="query" class="bg-light form-control border-0 small"
-                               placeholder="Search Room..." />
-                        <div class="input-group-append">
-                            <button class="btn btn-primary py-0" type="submit">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                </form>
                 <ul class="navbar-nav flex-nowrap ml-auto">
                     <li class="nav-item dropdown d-sm-none no-arrow">
                         <a aria-expanded="false" data-toggle="dropdown"
@@ -73,56 +58,53 @@
                                class="dropdown-toggle nav-link" href="#">
                                 <span class="d-none d-lg-inline mr-2 text-gray-600 font-weight-bold">
                                     @userManager.GetUserAsync(User).Result.FirstName
-                                @userManager.GetUserAsync(User).Result.LastName
-                        </a>
-                        <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
-                            @*<a class="dropdown-item" href="/profile/@userManager.GetUserAsync(User).Result.Id">
-                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
-                            </a>*@
-                            @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                            {
-                                <a class="dropdown-item" href="/administration/listroles">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Role Settings
-                                </a>
-                            }
-                            <a class="dropdown-item" href="/reservations">
-                                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i> Reservations
+                                    @userManager.GetUserAsync(User).Result.LastName
                             </a>
-                            <a class="dropdown-item" href="/payments">
-                                <i class="fas fa-clipboard-list fa-sm fa-fw mr-2 text-gray-400"></i> Payments
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <form method="post" asp-action="logout" asp-controller="account">
-                                <a class="dropdown-item d-flex">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 mt-auto mb-auto"></i>
-                                    <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">Log Out</button>
+                            <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
+                                @*<a class="dropdown-item" href="/profile/@userManager.GetUserAsync(User).Result.Id">
+                                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
+                                    </a>*@
+                                @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                {
+                                    <a class="dropdown-item" href="/administration/listroles">
+                                        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Role Settings
+                                    </a>
+                                }
+                                <a class="dropdown-item" href="/payments/@userManager.GetUserId(User)">
+                                    <i class="fas fa-clipboard-list fa-sm fa-fw mr-2 text-gray-400"></i> Payments
                                 </a>
-                            </form>
+                                <div class="dropdown-divider"></div>
+                                <form method="post" asp-action="logout" asp-controller="account">
+                                    <a class="dropdown-item d-flex">
+                                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 mt-auto mb-auto"></i>
+                                        <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">Log Out</button>
+                                    </a>
+                                </form>
+                            </div>
                         </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</header>
-<div class="container">
-    <main role="main" class="pb-3">
-        @RenderBody()
-    </main>
-</div>
-
-<footer class="border-top footer text-muted">
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <div class="container">
-        &copy; 2021 - Hotel Management - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <main role="main" class="pb-3">
+            @RenderBody()
+        </main>
     </div>
-</footer>
-<script src="~/lib/jquery/dist/jquery.min.js"></script>
-<script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
-<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="~/js/site.js" asp-append-version="true"></script>
-<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-@RenderSection("Scripts", required: false)
+
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2021 - Hotel Management - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        </div>
+    </footer>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 
 </html>
