--- a/Hotel.WebApp/Views/Rooms/AddRoom.cshtml
+++ b/Hotel.WebApp/Views/Rooms/AddRoom.cshtml
@@ -24,7 +24,7 @@
                                 <div class="form-group">
                                     <label asp-for="RoomNumber">
                                         <strong>
-                                            Course Name
+                                            Room Number
                                         </strong>
                                     </label><input class="form-control" asp-for="RoomNumber"
                                                    placeholder="Room Number">
