--- a/Hotel.WebApp/Views/Shared/_DashboardLayout.cshtml
+++ b/Hotel.WebApp/Views/Shared/_DashboardLayout.cshtml
@@ -67,41 +67,44 @@
                     <li class="nav-item dropdown no-arrow mx- d-flex">
                         <a class="nav-link" href="/dashboard"><i class="fas fa-home fa-fw"></i> Home</a>
                     </li>
+                    <li class="nav-item dropdown no-arrow mx- d-flex">
+                        <a class="nav-link" href="http://localhost:3000/video"><i class="far fa-comments"></i>Chat</a>
+                    </li>
                     <li class="nav-item dropdown no-arrow">
                         <div class="nav-item dropdown no-arrow">
                             <a aria-expanded="false" data-toggle="dropdown"
                                class="dropdown-toggle nav-link" href="#">
                                 <span class="d-none d-lg-inline mr-2 text-gray-600 font-weight-bold">
                                     @userManager.GetUserAsync(User).Result.FirstName
-                                @userManager.GetUserAsync(User).Result.LastName
-                        </a>
-                        <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
-                            @*<a class="dropdown-item" href="/profile/@userManager.GetUserAsync(User).Result.Id">
-                                <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
-                            </a>*@
-                            @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
-                            {
-                                <a class="dropdown-item" href="/administration/listroles">
-                                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Role Settings
-                                </a>
-                            }
-                            <a class="dropdown-item" href="/reservations">
-                                <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i> Reservations
+                                    @userManager.GetUserAsync(User).Result.LastName
                             </a>
-                            <a class="dropdown-item" href="/payments">
-                                <i class="fas fa-clipboard-list fa-sm fa-fw mr-2 text-gray-400"></i> Payments
-                            </a>
-                            <div class="dropdown-divider"></div>
-                            <form method="post" asp-action="logout" asp-controller="account">
-                                <a class="dropdown-item d-flex">
-                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 mt-auto mb-auto"></i>
-                                    <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">Log Out</button>
+                            <div class="dropdown-menu shadow dropdown-menu-right animated--grow-in">
+                                @*<a class="dropdown-item" href="/profile/@userManager.GetUserAsync(User).Result.Id">
+                        <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i> Profile
+                    </a>*@
+                                @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+                                {
+                                    <a class="dropdown-item" href="/administration/listroles">
+                                        <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i> Role Settings
+                                    </a>
+                                }
+                                <a class="dropdown-item" href="/reservations">
+                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i> Reservations
                                 </a>
-                            </form>
+                                <a class="dropdown-item" href="/payments">
+                                    <i class="fas fa-clipboard-list fa-sm fa-fw mr-2 text-gray-400"></i> Payments
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <form method="post" asp-action="logout" asp-controller="account">
+                                    <a class="dropdown-item d-flex">
+                                        <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400 mt-auto mb-auto"></i>
+                                        <button type="submit" class="nav-link btn btn-link py-0" style="width:auto">Log Out</button>
+                                    </a>
+                                </form>
+                            </div>
                         </div>
-                    </div>
-                </li>
-            </ul>
+                    </li>
+                </ul>
         </div>
     </nav>
 </header>
